Refactor and enhance DeepSeek test and model handling.
Added parameterized tests for vision models and introduced enhanced resource handling for file input. Implemented new API features including FIM support, dynamic models endpoint, and improved exception handling in `DeepSeekJackson`. Minor improvements to logging, annotations, and code structure for clarity and maintainability.